Issue : Video next button ripple added, click outside modal and learn circle alignment

--- a/src/app/component/app-tour-video/app-tour-video.component.scss
+++ b/src/app/component/app-tour-video/app-tour-video.component.scss
@@ -30,6 +30,7 @@
   background-color: #1C4CA1;
   .next-btn {
     background: #F3962E;
+    overflow: hidden;
   }
 }
 
@@ -48,6 +49,7 @@
   background-color: transparent;
   .next-btn {
     background: #F3962E;
+    overflow: hidden;
   }
 }
 .video-header-row-mobile {
@@ -67,4 +69,91 @@
   z-index: 99999;
   justify-content: center;
   align-items: center;
+}
+
+// // Ripple animation
+// @keyframes ripple {
+//   0% {
+//       width: 0;
+//       height: 0;
+//       opacity: .5;
+//   }
+  
+//   100% {
+//       width: 150px;
+//       height: 150px;
+//       opacity: 0;
+//   }
+// }
+
+// // Ripple
+// .ripple {
+//   &:before {
+//       content: '';
+//       position: absolute;
+//       top: 50%;
+//       left: 50%;
+//       width: 0;
+//       height: 0;
+//       transform: translate(-50%, -50%);
+//       border-radius: 50%;
+//       background-color: currentColor;
+//       visibility: hidden;
+//       z-index: 2;
+//   }
+  
+//   &:not(:active):before {
+//       animation: ripple .4s cubic-bezier(0, 0, .2, 1);
+//       transition: visibility .4s step-end;
+//   }
+  
+//   &:active:before {
+//       visibility: visible;
+//   }
+// }
+
+.ripple-btn:after {
+  content: "";
+  mix-blend-mode: screen;
+  position: absolute;
+  right: 50%;
+  width: 100%;
+  height: 100%;
+  background: rgba(236, 239, 245, 0.5);
+  opacity: 0;
+  transform-origin: 50% 50%;
+}
+
+@keyframes ripple {
+  0%, 35% {
+    transform: scale(0);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.5);
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(4);
+  }
+}
+
+// @keyframes ripple {
+//   0% {
+//       width: 0;
+//       height: 0;
+//       opacity: .5;
+//   }
+  
+//   100% {
+//       width: 150px;
+//       height: 150px;
+//       opacity: 0;
+//   }
+// }
+
+.ripple-btn::after {
+  animation: ripple 1.2s ease-out infinite;
+  animation-delay: 1s;
 }
